# DTBoxGUI

./: Cargo.toml  README.md  settings.json
docs/: README.md
src/: lib.rs  main.rs
src/app/: application.rs  config.rs  macros.rs  message.rs  settings.rs  state.rs  token_store.rs  widget.rs  window.rs
src/domain/: api.rs  config.rs  server.rs
src/infra/: dir.rs  logging.rs
src/utils/: dir.rs
src/view/: mod.rs  start.rs  start_page.rs
src/widget/: mod.rs
src/widget/app/: menu.rs
src/widget/example/: plotters.rs
src/widget/settings/: server.rs
src/window/: main.rs  mod.rs  settings.rs
src/window/main/: index.rs  mod.rs
src/window/settings/: index.rs  mod.rs
src/window/settings/tabs/: logging.rs  server.rs
