[package]
name = "DTBoxGUI"
version = "0.1.0"
edition = "2024"

[lib]
name = "dtboxgui"

[dependencies]
anyhow = "1.0.102"
directories = "6.0.0"
iced = { version = "0.14.0", features = ["tokio", "svg"] }
image = "0.25.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
